# alpine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct.py
core/: camera.cpp  camera.h  event_broadcaster.cpp  event_broadcaster.h  input.cpp  loop_registry.cpp  loop_registry.h  primitive.cpp  primitive.h  program.cpp  program.h  sys.cpp  sys.h  transform.cpp  transform.h
core/io/: file.cpp
core/meshes/: cube_mesh.h  mesh.cpp  mesh.h  quad_mesh.h
core/world/: skybox.cpp  skybox.h
drivers/: drivers.cpp  drivers.h  rasterizer.cpp  rasterizer.h
drivers/peripherals/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
graphics/: graphics_client.cpp  graphics_client.h  material.cpp  material.h  shader_program.cpp  shader_program.h  shader_program_builder.cpp  shader_program_builder.h  sized_mesh_buffers.h
include/core/: camera.h  game_loop.h  input.h  loop_registry.h  primitive.h  program.h  resource.h  sys.h  transform.h
include/core/io/: file.h
include/core/meshes/: gpu_mesh.h
include/drivers/: drivers.h
include/drivers/peripherals/: mouse.h
include/graphics/: graphics_option.h  mesh_buffers.h
include/math/: mat4.h  math_defs.h  math_funcs.h  quaternion.h  ray.h  vector3.h
include/ui/: window.h
main/: main.cpp
math/: mat4.cpp  mat4.h  math_defs.h  math_funcs.h  quaternion.cpp  quaternion.h  ray.h  vector3.h
resources/meshes/: cube.json  quad.json
resources/shaders/: flat.frag  simple.frag  sine.frag  sine.vert  uvs.frag  uvs.vert
src/core/: camera.cpp  event_broadcaster.cpp  game_loop.cpp  input.cpp  primitive.cpp  program.cpp  resource.cpp  sys.cpp  transform.cpp
src/core/io/: file.cpp
src/core/meshes/: mesh.cpp
src/core/world/: skybox.cpp
src/drivers/: drivers.cpp  rasterizer.cpp
src/drivers/peripherals/: keyboard.cpp  mouse.cpp
src/graphics/: graphics_client.cpp  material.cpp  shader_program.cpp  shader_program_builder.cpp
src/main/: main.cpp
src/math/: mat4.cpp  quaternion.cpp
src/ui/: window.cpp  window_builder.cpp
ui/: window.cpp  window.h  window_builder.cpp  window_builder.h
